# lean-scanner-v2

./: .gitignore  HANDOFF.md  README.md  config.yaml  index.html  manifest.webmanifest  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  simulator.py  sw.js  ux_preview.html
autocapture/: __init__.py  config.py  pipeline.py  quality.py
benches/: ablation.mjs  detector_bench.py  ocr_bench.py  receipts_smoke.py  shared_dataset.py  srd_bench.mjs
captures-debug/: dump_20260720_173730_2x2.json  dump_20260720_173834_4x4.json  dump_20260720_174019_200x200.json  dump_20260720_174019_200x200.rgb  dump_20260720_174057_480x640.json  dump_20260720_174057_480x640.rgb  dump_20260720_174103_480x640.json  dump_20260720_174103_480x640.rgb  dump_20260720_174108_480x640.json  dump_20260720_174108_480x640.rgb  dump_20260720_175214_4x4.json  dump_20260720_175415_4x4.json  dump_20260720_175727_4x4.json  dump_20260720_175902_4x4.json  dump_20260720_180103_2x2.json  dump_20260720_180104_2x2.json  dump_20260720_180239_480x640.json  dump_20260720_180239_480x640.rgb.raw  dump_20260720_180249_480x640.json  dump_20260720_180249_480x640.rgb.raw  dump_20260720_180254_480x640.json  dump_20260720_180254_480x640.rgb.raw  dump_20260720_181808_480x640.json  dump_20260720_181808_480x640.rgb.raw  dump_20260720_181812_480x640.json  dump_20260720_181812_480x640.rgb.raw  dump_20260720_181817_480x640.json  dump_20260720_181817_480x640.rgb.raw  dump_20260720_181824_480x640.json  dump_20260720_181824_480x640.rgb.raw  dump_20260720_181829_480x640.json  dump_20260720_181833_480x640.json  (+228 more)
(+94 files in other folders)
